--- a/presentation/bibliography/bibliography.bib
+++ b/presentation/bibliography/bibliography.bib
@@ -7,13 +7,15 @@
   year={2002}
 }
 
-@article{lunardon2014rose,
-  title={ROSE: a package for binary imbalanced learning.},
-  author={Lunardon, Nicola and Menardi, Giovanna and Torelli, Nicola},
-  journal={R journal},
-  volume={6},
-  number={1},
-  year={2014}
+@article{van2022harm,
+  title={The harm of class imbalance corrections for risk prediction models: illustration and simulation using logistic regression},
+  author={van den Goorbergh, Ruben and van Smeden, Maarten and Timmerman, Dirk and Van Calster, Ben},
+  journal={Journal of the American Medical Informatics Association},
+  volume={29},
+  number={9},
+  pages={1525--1534},
+  year={2022},
+  publisher={Oxford University Press}
 }
 
 
